# boing-network

./: .gitignore  AUTOMATION-VERIFICATION.md  BETA-READINESS.md  BOING-BLOCKCHAIN-DESIGN-PLAN.md  BUILD-ROADMAP.md  Cargo.toml  DECENTRALIZATION-STRATEGY.md  DEVELOPMENT-RECOMMENDATIONS.md  ENHANCEMENT-VISION.md  NETWORK-COST-ESTIMATE.md  README.md  RUNBOOK.md  SECURITY-STANDARDS.md  TESTNET.md  VIBEMINER-INTEGRATION.md  WEBRTC-SIGNALING.md
.github/workflows/: deploy-pages.yml
boing-sdk/: README.md  package-lock.json  package.json
boing-sdk/src/: client.ts  errors.ts  hex.ts  index.ts  types.ts
crates/boing-automation/: Cargo.toml
crates/boing-cli/: Cargo.toml
crates/boing-consensus/: Cargo.toml
crates/boing-p2p/: Cargo.toml
crates/boing-p2p/src/: block_sync.rs  discovery.rs  lib.rs  node.rs  webrtc.rs
crates/boing-p2p/tests/: webrtc_signaling.rs
docs/: AUTOMATION-VERIFICATION.md  BETA-READINESS.md  BOING-BLOCKCHAIN-DESIGN-PLAN.md  BOING-DESIGN-SYSTEM.md  BOING-EXPRESS-WALLET.md  BOING-NETWORK-ESSENTIALS.md  BUILD-ROADMAP.md  DECENTRALIZATION-AND-NETWORKING.md  DESIGN-SYSTEM-COMPLIANCE.md  DESIGN-TAKEOVER-AUDIT.md  DEVELOPMENT-AND-ENHANCEMENTS.md  NETWORK-COST-ESTIMATE.md  QUALITY-ASSURANCE-NETWORK.md  RPC-API-SPEC.md  RUNBOOK.md  SECURITY-STANDARDS.md  TESTNET.md  VIBEMINER-INTEGRATION.md  WALLET-PROJECT-PROMPT.md
fuzz/: Cargo.toml  README.md  rust-toolchain.toml
website/: CLOUDFLARE-SETUP.md  README.md  WEBSITE-SPEC.md  astro.config.mjs  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml  wrangler.worker.toml
(+106 files in other folders)
