[package]
name = "boing-p2p"
version = "0.1.0"
edition = "2021"
description = "P2P networking for Boing blockchain"

[dependencies]
boing-primitives = { path = "../boing-primitives" }
bincode = "1"
serde = { version = "1", features = ["derive"] }
libp2p = { version = "0.54", features = ["tcp", "mdns", "noise", "yamux", "gossipsub", "tokio", "tls", "macros", "request-response", "cbor"] }
libp2p-swarm = { version = "0.45", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
thiserror = "1"
